Fix top menu style on mobile

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -35,8 +35,6 @@ body {
 /* Top menu */
 
 header {
-    position: fixed;
-    width: var(--text-width);
     display: flex;
     justify-content: flex-end;
     gap: 10px;
